tests/ui/rust-2024/prelude-migration/into-future-not-into-future.e2021.stderr
error: trait method `into_future` will become ambiguous in Rust 2024
  --> $DIR/into-future-not-into-future.rs:19:5
   |
LL |     Cat.into_future();
   |     ^^^^^^^^^^^^^^^^^ help: disambiguate the associated function: `Meow::into_future(&Cat)`
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/prelude.html>
note: the lint level is defined here
  --> $DIR/into-future-not-into-future.rs:7:9
   |
LL | #![deny(rust_2024_prelude_collisions)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

